# swagger.yaml
@@ -25,6 +25,23 @@ definitions:
         type: string
         description: Version identifier
 
+  CreateProject:
+    type: object
+    required:
+      - name
+      - shipyard
+    properties:
+      name:
+        type: string
+      shipyard:
+        type: string
+      gitUser:
+        type: string
+      gitToken:
+        type: string
+      gitRemoteURL:
+        type: string
+
   Project:
     type: object
     properties:
@@ -90,6 +107,20 @@ definitions:
         items:
           $ref: '#/definitions/Stage'
 
+
+  CreateService:
+    type: object
+    required:
+      - serviceName
+    properties:
+      serviceName:
+        type: string
+      helmChart:
+        type: string
+      deploymentStrategies:
+        type: object
+        additionalProperties:
+          type: string
   Service:
     type: object
     properties:
